# remapper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
remap/: remap.py
remapper/: __init__.py  remap.py
tests/: test_remap.py
