[project]
name = "remap"
version = "1.0.0"
description = "Transform objects to and from similar structural mappings."
authors = [{ name = "Elias Gabriel", email = "me@eliasfgabriel.com" }]
readme = "README.md"
license = "BSD-3-Clause-Clear"
license-files = ["LICENSE"]
requires-python = ">=3.8"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.3.4"]

[tool.pytest.ini_options]
addopts = '-ra -vv'
testpaths = ["tests"]

[tool.mypy]
strict = true

[tool.ruff.lint]
extend-select = ["B", "I"]

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
