[project]
name = "remapper"
version = "1.0.0.post0"
description = "Transform objects to and from similar structural mappings."
authors = [{ name = "Elias Gabriel", email = "oss@eliasfgabriel.com" }]
readme = "README.md"
license = "BSD-3-Clause-Clear"
license-files = ["LICENSE"]
keywords = ["mapping", "dataclass", "presentation", "models", "util"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
homepage = "https://github.com/thearchitector/remapper"
source = "https://github.com/thearchitector/remapper"
changelog = "https://github.com/thearchitector/remapper/releases"
issues = "https://github.com/thearchitector/remapper/issues"

[dependency-groups]
dev = ["pytest>=8.3.4", "mypy>=1.14.1"]

[tool.pytest.ini_options]
addopts = '-ra -vv'
testpaths = ["tests"]

[tool.mypy]
strict = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["B", "I"]

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
